
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#5410] Add lock_ttl to System Settings for controlling ttl for resource locks
- [#6575] Ensure that downloads of packages work behind proxies if allow_url_fopen is on
- [#4879] Add language selector to login page
- [#6826] Add activate/deactivate to context menu for Plugins in tree
- [#6509] Fix minify issue in windows environments due to doc root pathing
- Fix CSS for active tabs in mgr in IE
- Prevent ENTER key from firing save in textareas in various modals
- [#6712] Fix issue with Resource Group tree being limited to 10 groups
- Bypass modSystemSetting->clearCache() when OPT_SETUP is true
- Allow display of custom messages from form processors
- Fix issue with extra slashes in URIs
- Add ability to reload permissions for all authenticated users
- [#6651] Add properties field and API methods for modResource
- [#6613] Ensure page redirects if removing Element via tree that is currently being edited
- [#6608] Fix search text in package management when doing empty search
- [#6633] Ensure change password fieldset checkbox toggles dirty status for user form
- [#6567] Fix Suhosin check to disable compress_js setting
- [#6587] Fix issue with combobox rendering in editable grids by providing combocolumn xtype for proper data rendering
- [#6583] Fix duplicate upload_files values
- Prevent editing and deleting of core standard Roles

MODX Revolution 2.2.0-pl2 (January 4, 2012)
====================================
- [#6564] Fix issue where save button on New Resource does not work due to JS DOM error
- [#6470] Fix issue where Media Sources could not be protected on new installs only

MODX Revolution 2.2.0-pl (January 4, 2012)
====================================
- [#6559] Fix issue with save btn on resources not enabling after template change