@@ -260,6 +260,7 @@ class modMediaSource extends modAccessibleSimpleObject implements modMediaSource
      * @return boolean
      */
     public function initialize() {
+        $this->setProperties($this->getProperties(true));
         $this->getPermissions();
         return true;
     }
@@ -384,9 +385,10 @@ class modMediaSource extends modAccessibleSimpleObject implements modMediaSource
 
     /**
      * Get the properties on this source
+     * @param boolean $parsed
      * @return array
      */
-    public function getProperties() {
+    public function getProperties($parsed = false) {
         $properties = $this->get('properties');
         $defaultProperties = $this->getDefaultProperties();
         if (!empty($properties) && is_array($properties)) {
@@ -414,6 +416,9 @@ class modMediaSource extends modAccessibleSimpleObject implements modMediaSource
                 $properties = array_merge($properties,$result);
             }
         }
+        if ($parsed) {
+            $properties = $this->parseProperties($properties);
+        }
         return $this->prepareProperties($properties);
     }
 
@@ -422,7 +427,7 @@ class modMediaSource extends modAccessibleSimpleObject implements modMediaSource
      * @return array
      */
     public function getPropertyList() {
-        $properties = $this->getProperties();
+        $properties = $this->getProperties(true);
         $list = array();
         foreach ($properties as $property) {
             $value = $property['value'];
@@ -433,6 +438,22 @@ class modMediaSource extends modAccessibleSimpleObject implements modMediaSource
         }
         $list = array_merge($list,$this->properties);
         return $list;
+    }
+
+    /**
+     * Parse any tags in the properties
+     * @param array $properties
+     * @return array
+     */
+    public function parseProperties(array $properties) {
+        $properties = $this->getProperties();
+        $this->xpdo->getParser();
+        if ($this->xpdo->parser) {
+            foreach ($properties as &$property) {
+                $this->xpdo->parser->processElementTags('',$property['value'],true,true);
+            }
+        }
+        return $properties;
     }
 
     /**
